# ScholarDevClaw

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AGENT_NEW.md  APPLY.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  GUIDE.md  LICENSE  Makefile  Optimizations.md  PRODUCTION_CREDENTIALS.md  README.md  SECURITY.md  SECURITY_UPDATES.md  ScholarDevClaw_Hardening_Launch.docx  UPDATES.md  UPGRADE.md  demo.md  demo.tape  index.html  install.sh  robots.txt  site.webmanifest
core/: MANIFEST.in  README.md  pyproject.toml
core/.pyre/: pyre.stderr
core/benchmarks/: __init__.py  acceptance.py  acceptance_cases.json  acceptance_report.json  acceptance_summary.md  benchmark_report.json  benchmark_summary.md  profile_pipeline.py  regression.py  report.py  reviews.json  runner.py
core/benchmarks/expected/: alibi.py  cosine_lr_schedule.py  flash_attention.py  flashattention.py  gelu.py  grouped_query_attention.py  layernorm.py  lora.py  rmsnorm.py  rope.py  swiglu.py
core/benchmarks/papers/: catalog.json  flash_attention.py  lora.py
core/benchmarks/profile_results/: mapping_engine_full.prof  mapping_text_scan.prof  tree_sitter_analyze.prof  tree_sitter_detect_languages.prof
core/benchmarks/targets/alibi_repo/: model.py
core/benchmarks/targets/cosine_lr_schedule_repo/: train.py
core/benchmarks/targets/flashattention_repo/: model.py
core/benchmarks/targets/gelu_repo/: model.py
core/benchmarks/targets/grouped_query_attention_repo/: model.py
core/benchmarks/targets/layernorm_repo/: model.py
core/benchmarks/targets/lora_repo/: model.py
core/benchmarks/targets/rmsnorm_repo/: model.py
core/benchmarks/targets/rope_repo/: model.py
core/benchmarks/targets/swiglu_repo/: model.py
core/exports/: tui-log-20260321-132201.md
core/native/: Cargo.toml
core/native/src/: lib.rs
core/src/scholardevclaw/: __init__.py  cli.py  cli_v2.py  convex_client.py  exceptions.py
core/src/scholardevclaw/agent/: __init__.py  embeddings.py  engine.py  memory.py  planning.py  reflection.py  repl.py  smart_engine.py  sub_agents.py  terminal.py  tools.py
core/src/scholardevclaw/api/: __init__.py  docs.py  health_routes.py  metrics_middleware.py  rate_limit_middleware.py  request_size_middleware.py  server.py
core/src/scholardevclaw/application/: __init__.py  cache.py  pipeline.py  schema_contract.py
core/src/scholardevclaw/auth/: __init__.py  analytics.py  approval.py  audit.py  cli.py  encryption.py  hardware_keys.py  import_export.py  oauth.py  rate_limit.py  rotation.py  store.py  team.py  types.py
core/src/scholardevclaw/automation/: __init__.py  auto_apply.py  batch.py  scheduler.py  webhooks.py
core/src/scholardevclaw/context_engine/: __init__.py  brain.py  store.py
core/src/scholardevclaw/critic/: __init__.py
core/src/scholardevclaw/deploy/: __init__.py  preflight.py
core/src/scholardevclaw/execution/: __init__.py  healer.py  profiles.py  sandbox.py  scorer.py
core/src/scholardevclaw/experiment/: __init__.py  compare.py  tracker.py  visualize.py
core/src/scholardevclaw/generation/: __init__.py  models.py  module_agent.py  orchestrator.py
core/src/scholardevclaw/github_app/: __init__.py  client.py  manifest.json  server.py  types.py  webhook.py
core/src/scholardevclaw/ingestion/: __init__.py  models.py  paper_fetcher.py  pdf_parser.py
core/src/scholardevclaw/knowledge/: __init__.py  store.py
core/src/scholardevclaw/llm/: __init__.py  client.py  confidence.py  multi_model.py  rag_context.py  research_assistant.py
core/src/scholardevclaw/mapping/: __init__.py  engine.py
core/src/scholardevclaw/multi_repo/: __init__.py  analysis.py  manager.py  transfer.py
core/src/scholardevclaw/patch_generation/: __init__.py  generator.py
core/src/scholardevclaw/planner/: __init__.py
core/src/scholardevclaw/planning/: __init__.py  models.py  planner.py
core/src/scholardevclaw/plugins/: __init__.py  auto_lint.py  event_logger.py  hooks.py  javalang.py  jsts.py  manager.py  metrics_collector.py  rustlang.py  security.py
core/src/scholardevclaw/product/: __init__.py  scaffolder.py  traceability.py  trust_report.py
core/src/scholardevclaw/repo_intelligence/: __init__.py  call_graph.py  code_embeddings.py  dependency_graph.py  detector.py  multi_lang_analyzer.py  parser.py  refactoring.py  tree_sitter_analyzer.py
core/src/scholardevclaw/research_intelligence/: __init__.py  citation_graph.py  embeddings.py  enhanced_extractor.py  (+4 more)
core/tests/: test_execution.py  test_ingestion.py  test_knowledge.py  test_planning.py  test_product.py  test_understanding.py
core/tests/e2e/: __init__.py  conftest.py  test_analyze.py  test_auth.py  test_auth_agent.py  test_benchmark_scenarios.py  test_context.py  test_critic.py  test_experiment.py  test_full_pipeline.py  test_generate.py  test_integrate.py  test_map.py  test_planner.py  test_preflight.py  test_search.py  test_specs.py  test_suggest.py  test_validate.py
core/tests/fixtures/: attention_paper_document.json  attention_understanding.json  broken_module.py  simple_plan.json
core/tests/generation/: test_orchestrator.py
core/tests/unit/: test_acceptance_benchmark.py  test_api_dashboard_routes.py  test_api_server.py  test_api_validation_endpoints.py  test_atomic_write.py  test_auth.py  test_auth_analytics.py  test_auth_approval.py  test_auth_audit.py  test_auth_cli.py  test_auth_cli_extended.py  test_auth_encryption.py  test_auth_hardware_keys.py  test_auth_import_export.py  test_auth_oauth.py  test_auth_profiles.py  test_auth_rate_limit.py  test_auth_rotation.py  test_auth_security.py  test_auth_team.py  test_benchmark.py  test_benchmark_regression.py  test_benchmark_runner.py  test_cache.py  test_circuit_breaker.py  test_citation_graph.py  test_cli.py  test_config.py  test_connection_pool.py  test_convex_client.py  test_deploy_preflight.py  test_error_codes.py  test_execution_profiles.py  test_github_app.py  test_graph.py  test_health.py  test_llm_client.py  test_llm_research_assistant.py  test_logger.py  test_mapping_engine.py  (+57 more)
(+216 files in other folders)
