[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholardevclaw-core"
version = "0.1.0"
description = "ScholarDevClaw - Autonomous ML Research Integration Engine Core"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ScholarDevClaw Team", email = "team@scholardevclaw.ai"}
]
keywords = ["machine-learning", "pytorch", "research", "integration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "libcst>=1.0.0",
    "gitpython>=3.1.40",
    "pymupdf>=1.23.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "arxiv>=1.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tree-sitter>=0.20.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
arxiv = ["arxiv>=1.4.0"]
ml = ["torch>=2.0.0", "transformers>=4.35.0", "datasets>=2.14.0"]
tui = ["textual>=0.82.0"]
security = ["bandit>=1.7.0", "semgrep>=1.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
scholardevclaw = "scholardevclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
