[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholardevclaw"
version = "2.0.0"
description = "ScholarDevClaw — Autonomous ML Research Integration Engine. Analyzes repositories, finds research improvements, and generates validated patches."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "ScholarDevClaw Team", email = "team@scholardevclaw.ai"}
]
maintainers = [
    {name = "Ronak Anand"}
]
keywords = [
    "scholardevclaw",
    "research-to-code",
    "paper-to-code",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "research",
    "integration",
    "ai",
    "code-generation",
    "ast",
    "tree-sitter",
    "arxiv",
    "paper-implementation",
    "patch-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "libcst>=1.0.0",
    "gitpython>=3.1.40",
    "pymupdf>=1.23.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
arxiv = ["arxiv>=1.4.0"]
torch = ["torch>=2.0.0"]
ml = ["torch>=2.0.0", "transformers>=4.35.0", "datasets>=2.14.0"]
tui = ["textual>=0.82.0"]
security = ["bandit>=1.7.0", "semgrep>=1.0.0"]
crypto = ["cryptography>=42.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "cryptography>=42.0.0",
]
all = [
    "scholardevclaw[arxiv,ml,tui,crypto]",
]

[project.urls]
Homepage = "https://github.com/Ronak-IIITD/ScholarDevClaw"
Repository = "https://github.com/Ronak-IIITD/ScholarDevClaw"
Issues = "https://github.com/Ronak-IIITD/ScholarDevClaw/issues"
Changelog = "https://github.com/Ronak-IIITD/ScholarDevClaw/blob/main/CHANGELOG.md"

[project.scripts]
scholardevclaw = "scholardevclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scholardevclaw = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
