[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholardevclaw"
version = "2.0.0"
description = "ScholarDevClaw — Autonomous ML Research Integration Engine. Analyzes repositories, finds research improvements, and generates validated patches."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "ScholarDevClaw Team", email = "team@scholardevclaw.ai"}
]
maintainers = [
    {name = "Ronak Anand"}
]
keywords = [
    "scholardevclaw",
    "research-to-code",
    "paper-to-code",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "research",
    "integration",
    "ai",
    "code-generation",
    "ast",
    "tree-sitter",
    "arxiv",
    "paper-implementation",
    "patch-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "libcst>=1.8.6",
    "gitpython>=3.1.46",
    "pymupdf>=1.27.2.2",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "numpy>=2.2.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
    "rich>=15.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-java>=0.23.5",
    "PyJWT>=2.12.1",
    "requests>=2.33.1",
]

[project.optional-dependencies]
arxiv = ["arxiv>=3.0.0"]
torch = ["torch>=2.11.0"]
ml = ["torch>=2.11.0", "transformers>=5.5.4", "datasets>=4.8.4"]
tui = ["textual>=8.2.3"]
security = ["bandit>=1.9.4", "semgrep>=1.159.0"]
crypto = ["cryptography>=42.0.8"]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "cryptography>=42.0.8",
]
all = [
    "scholardevclaw[arxiv,ml,tui,crypto]",
]

[project.urls]
Homepage = "https://github.com/Ronak-IIITD/ScholarDevClaw"
Repository = "https://github.com/Ronak-IIITD/ScholarDevClaw"
Issues = "https://github.com/Ronak-IIITD/ScholarDevClaw/issues"
Changelog = "https://github.com/Ronak-IIITD/ScholarDevClaw/blob/main/CHANGELOG.md"

[project.scripts]
scholardevclaw = "scholardevclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scholardevclaw = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
