[package]
name = "scholardevclaw-native"
version = "0.1.0"
edition = "2021"
description = "Rust native extensions for ScholarDevClaw — fast AST walking via tree-sitter"

[lib]
name = "scholardevclaw_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-java = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
